Fitness-Studio CRM/force-app/main/default/objects/Member__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <formula>CASE(
    Membership_Type__c,
    &quot;Monthly&quot;,  DATE(
        YEAR(TODAY()),
        MONTH(TODAY()) + 1,
        DAY(TODAY())
    ),
    &quot;Quarterly&quot;, DATE(
        YEAR(TODAY()),
        MONTH(TODAY()) + 3,
        DAY(TODAY())
    ),
    &quot;Yearly&quot;, DATE(
        YEAR(TODAY()) + 1,
        MONTH(TODAY()),
        DAY(TODAY())
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExpiryDate</label>
    <type>Date</type>
</CustomField>