Fitness-Studio CRM/force-app/main/default/objects/Member__c/fields/Membership_Access__c.field-meta.xml
<CustomField>
    <fullName>Membership_Access__c</fullName>
    <label>Membership Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Membership</fullName>
            </value>
            <value>
                <fullName>Plus Membership</fullName>
            </value>
            <value>
                <fullName>Gold Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>