Fitness-Studio CRM/force-app/main/default/objects/Member__c/recordTypes/Manager_Member.recordType-meta.xml
<RecordType>
    <fullName>Manager_Member</fullName>
    <active>false</active>
    <description>Layout for Managers</description>
    <label>Manager Member</label>
</RecordType>