Fitness-Studio CRM/force-app/main/default/objects/Member__c/recordTypes/Premium.recordType-meta.xml
<RecordType>
    <fullName>Premium</fullName>
    <active>true</active>
    <description>Premium Members have extra benefits (like personal trainer assignment field visible only to them)</description>
    <label>Premium</label>
</RecordType>