Fitness-Studio CRM/force-app/main/default/objects/Member__c/recordTypes/Regular_Member.recordType-meta.xml
<RecordType>
    <fullName>Regular_Member</fullName>
    <active>false</active>
    <label>Regular Member</label>
</RecordType>