Fitness-Studio CRM/force-app/main/default/objects/Member__c/recordTypes/trainer.recordType-meta.xml
<RecordType>
    <fullName>trainer</fullName>
    <active>false</active>
    <description>Layout for Trainers</description>
    <label>trainer member</label>
</RecordType>